--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(run_setup)
-importFrom(SqlRender,render)
 importFrom(cli,cat_boxx)
 importFrom(cli,cat_line)
 importFrom(dplyr,bind_rows)
@@ -10,14 +9,13 @@ importFrom(dplyr,everything)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
-importFrom(pg13,drop_cascade)
 importFrom(pg13,drop_table)
 importFrom(pg13,ls_tables)
 importFrom(pg13,query)
 importFrom(pg13,read_table)
 importFrom(pg13,render_row_count)
-importFrom(pg13,schema_exists)
 importFrom(pg13,send)
 importFrom(pg13,table_exists)
 importFrom(pg13,write_table)
