--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,12 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr
+    magrittr,
+    cli,
+    tidyverse,
+    glue,
+    pg13
+Remotes: 
+    meerapatelmd/pg13
 Depends: 
     R (>= 2.10)
